--- a/AoC/AoC.csproj
+++ b/AoC/AoC.csproj
@@ -17,6 +17,9 @@
     <None Update="Data\Day3.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Day4.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
